Instruction block entity